--- a/ship/src/main/AndroidManifest.xml
+++ b/ship/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.dthfish.ship"/>
+          package="com.dthfish.ship">
+
+    <application>
+        <activity android:name=".ShipActivity"/>
+    </application>
+</manifest>
